# OpenGLFramework

./: .gitmodules  CMakeLists.txt  readme.md
MyGL/: Camera.cpp  Camera.h  ElementBuffer.cpp  ElementBuffer.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  debugging.hpp
MyGL/Models/: Model.cpp  Model.h
dependencies/GLAD/include/glad/: glad.h
dependencies/GLAD/src/: glad.c
include/: MyGL.h  MyGLAPI.h  opengl.h
shaders/: fragment.glsl  vertex.glsl
